Fix Page Layout Issues

--- a/Themes SASS/darkTheme-AppVer.scss
+++ b/Themes SASS/darkTheme-AppVer.scss
@@ -123,9 +123,9 @@ body {
 }
 
 .page-content {
-	padding: 100px;
+	padding: 50px;
 	padding-top: 125px;
-	margin-left: 50px;
+	margin-left: 100px;
 	.nav-wrap {
 		position: fixed;
 		left: 0;
